HTTP methods listed explicitly for cors settings